--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cupertino_icons: ^1.0.4
   font_awesome_flutter: ^10.1.0
   google_fonts: ^2.3.2
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
